project(autoferry_mcmc)
cmake_minimum_required( VERSION 3.0.0 )

find_package(OpenMP)
find_package(LAPACK)
set(CSV_CXX_STANDARD 20)
add_subdirectory(csv-parser)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
if(COMPILER_SUPPORTS_MARCH_NATIVE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
endif()

find_library(MCMC libmcmc.so PATHS mcmc/)
find_path(MATPLOTLIB_CPP_INCLUDE_DIRS "matplotlibcpp.h")
find_package(Python3 COMPONENTS Development NumPy)
find_package(benchmark REQUIRED)

include_directories(stats/include)
include_directories(gcem/include)
include_directories(mcmc/include)
include_directories(csv-parser/single_include)
include_directories(eigen)
add_executable( ${PROJECT_NAME} main.cpp )
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
target_include_directories(${PROJECT_NAME} PRIVATE ${MATPLOTLIB_CPP_INCLUDE_DIRS} ${Python3_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX ${LAPACK_LIBRARIES} ${MCMC} Python3::Python Python3::NumPy benchmark::benchmark)